--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#FFF</color>
     <color name="colorPrimaryDark">#3DC77E</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#EAEAEA</color>
     <color name="light">#5D5D5D</color>
 </resources>
