--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,7 +20,7 @@
         android:contentDescription="@string/nav_header_desc"
         android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/loginlogo" />
+        app:srcCompat="@drawable/logo" />
 
     <ImageView
         android:id="@+id/imageView"
