Google Sign-in Bug Fixes

--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -9,24 +9,24 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="240dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="40dp"
-        android:contentDescription="@string/login_logo"
+        android:layout_width="136dp"
+        android:layout_height="218dp"
+        android:layout_marginTop="60dp"
+        android:contentDescription="pa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
     <EditText
-        android:id="@+id/nameEditText"
-        android:layout_width="333dp"
-        android:layout_height="45dp"
+        android:id="@+id/registerNameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="45sp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="60dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
@@ -36,19 +36,19 @@
         android:singleLine="true"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
+        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/passwordEditTextLogin"
-        android:layout_width="333dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="45sp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
@@ -58,12 +58,12 @@
         android:textSize="18sp"
         android:typeface="normal"
         app:fontFamily="@font/tajawal_light"
+        app:layout_constraintBottom_toTopOf="@+id/facebookButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/registerNextButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -71,7 +71,7 @@
         android:layout_marginLeft="140dp"
         android:layout_marginEnd="140dp"
         android:layout_marginRight="140dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/next_button_selector"
         android:textColor="@color/colorPrimary"
         android:textSize="50sp"
@@ -82,49 +82,48 @@
     <Button
         android:id="@+id/facebookButton"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="220sp"
+        android:layout_height="35sp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/facebook_button_selector"
+        app:layout_constraintBottom_toTopOf="@+id/googleButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLogin" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/googleButton"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="230dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="210sp"
+        android:layout_height="35sp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/google_button_selector"
+        app:layout_constraintBottom_toTopOf="@+id/registerNameTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facebookButton" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/notUserTextView"
+        android:id="@+id/registerNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/not_user"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
+        app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/googleButton" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/registerButton"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="80dp"
         android:layout_height="25dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="27dp"
         android:background="@drawable/register_button_selector"
-        app:layout_constraintBottom_toTopOf="@+id/loginButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.83" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
