--- a/app/src/main/res/layout/acitivity_register_screen.xml
+++ b/app/src/main/res/layout/acitivity_register_screen.xml
@@ -8,30 +8,31 @@
     tools:ignore="LabelFor" >
 
     <EditText
-        android:id="@+id/nameEditText"
-        android:layout_width="333dp"
+        android:id="@+id/registerNameEditText"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:autoText="false"
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/name"
-        android:inputType="textEmailAddress"
+        android:inputType="text|textEmailAddress"
         android:paddingTop="5sp"
         android:singleLine="true"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/registerNameTextView" />
 
     <EditText
-        android:id="@+id/nameEditText2"
-        android:layout_width="333dp"
+        android:id="@+id/registerEmailEditText"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
@@ -49,11 +50,11 @@
         app:fontFamily="@font/tajawal_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView3" />
+        app:layout_constraintTop_toBottomOf="@+id/registerEmailTextView" />
 
     <EditText
-        android:id="@+id/nameEditText3"
-        android:layout_width="333dp"
+        android:id="@+id/registerPasswordEditText"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
@@ -64,39 +65,17 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/password"
-        android:inputType="textEmailAddress"
+        android:inputType="textEmailAddress|textWebPassword"
         android:paddingTop="5sp"
         android:singleLine="true"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView4" />
+        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextView" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="333dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:background="@drawable/edit_text"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="@string/repeat_password"
-        android:inputType="textEmailAddress"
-        android:paddingTop="5sp"
-        android:singleLine="true"
-        android:textSize="18sp"
-        app:fontFamily="@font/tajawal_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView5" />
-
-    <EditText
-        android:id="@+id/nameEditText5"
+        android:id="@+id/registerDateEditText"
         android:layout_width="68dp"
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
@@ -106,36 +85,34 @@
         android:ems="10"
         android:gravity="center"
         android:hint="01"
-        android:inputType="textEmailAddress"
+        android:inputType="number|textEmailAddress"
         android:paddingTop="5sp"
         android:singleLine="true"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
-        app:layout_constraintEnd_toStartOf="@+id/nameEditText6"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView2" />
+        app:layout_constraintEnd_toStartOf="@+id/registerMonthEditText"
+        app:layout_constraintTop_toBottomOf="@+id/registerDOBTextView" />
 
     <EditText
-        android:id="@+id/nameEditText6"
+        android:id="@+id/registerMonthEditText"
         android:layout_width="68dp"
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="65dp"
         android:background="@drawable/edit_text"
         android:ems="10"
         android:gravity="center"
         android:hint="01"
-        android:inputType="textEmailAddress"
+        android:inputType="number|textEmailAddress"
         android:paddingTop="5sp"
         android:singleLine="true"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
-        app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView2" />
+        app:layout_constraintTop_toBottomOf="@+id/registerDOBTextView" />
 
     <EditText
-        android:id="@+id/nameEditText7"
+        android:id="@+id/registerYearEditText"
         android:layout_width="80dp"
         android:layout_height="45dp"
         android:layout_marginStart="10dp"
@@ -150,23 +127,24 @@
         android:singleLine="true"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
-        app:layout_constraintStart_toEndOf="@+id/nameEditText6"
-        app:layout_constraintTop_toBottomOf="@+id/notUserTextView2" />
+        app:layout_constraintStart_toEndOf="@+id/registerMonthEditText"
+        app:layout_constraintTop_toBottomOf="@+id/registerDOBTextView" />
 
     <TextView
-        android:id="@+id/notUserTextView"
+        android:id="@+id/registerNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
         android:text="@string/name"
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_medium"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13" />
 
     <TextView
-        android:id="@+id/notUserTextView3"
+        android:id="@+id/registerEmailTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -175,10 +153,10 @@
         app:fontFamily="@font/tajawal_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/registerNameEditText" />
 
     <TextView
-        android:id="@+id/notUserTextView4"
+        android:id="@+id/registerPasswordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -187,10 +165,10 @@
         app:fontFamily="@font/tajawal_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText2" />
+        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText" />
 
     <TextView
-        android:id="@+id/notUserTextView2"
+        android:id="@+id/registerDOBTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -199,22 +177,10 @@
         app:fontFamily="@font/tajawal_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
-
-    <TextView
-        android:id="@+id/notUserTextView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="@string/repeat_password"
-        android:textSize="18sp"
-        app:fontFamily="@font/tajawal_medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText3" />
+        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/registerNextButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -231,17 +197,16 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/backButton"
+        android:id="@+id/registerBackButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="10dp"
         android:layout_height="20dp"
-        android:layout_marginEnd="300dp"
-        android:layout_marginRight="300dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/back_chevron_selector"
         android:textColor="@color/colorPrimary"
         android:textSize="50sp"
-        app:layout_constraintBottom_toTopOf="@+id/notUserTextView"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
