--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -7,55 +7,71 @@
     android:layout_marginTop="10sp">
 
 
-        <LinearLayout
-            android:layout_width="90sp"
-            android:layout_height="30sp"
-            android:background="@drawable/red_colored_label"
-            android:elevation="2sp"
-            android:layout_marginLeft="7sp"
-            android:layout_marginTop="2sp"
-            android:id="@+id/item_color_tag">
+    <LinearLayout
+        android:id="@+id/item_color_tag"
+        android:layout_width="106dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="2sp"
+        android:background="@drawable/red_colored_label"
+        android:elevation="2sp"
+        android:orientation="horizontal">
 
-        </LinearLayout>
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="60sp"
-            android:layout_marginTop="5sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginLeft="30sp"
-            android:elevation="1sp"
-            android:background="@drawable/red_colored_label"
-            app:cardCornerRadius="15sp"
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/item_card_view"
+        android:layout_width="355dp"
+        android:layout_height="66dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="5sp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="10sp"
+        android:background="@drawable/red_colored_label"
+        android:elevation="1sp"
+        app:cardCornerRadius="15sp">
+
+        <TextView
+            android:id="@+id/item_brand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15sp"
+            android:layout_marginTop="12sp"
+            android:fontFamily="@font/tajawal_light"
+            android:text="Goldenvale"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="20sp"
             android:layout_marginBottom="10sp"
-            android:id="@+id/item_card_view">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Goldenvale"
-                android:fontFamily="@font/tajawal_light"
-                android:textSize="13sp"
-                android:layout_marginTop="12sp"
-                android:layout_marginLeft="20sp"
-                android:id="@+id/item_brand"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cornflakes"
-                android:fontFamily="@font/tajawal_light"
-                android:textSize="20sp"
-                android:layout_marginTop="30sp"
-                android:layout_marginLeft="20sp"
-                android:id="@+id/item_name"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="50 kcal"
-                android:fontFamily="@font/tajawal_extra_light"
-                android:textSize="20sp"
-                android:layout_marginTop="20sp"
-                android:layout_marginLeft="270sp"
-                android:id="@+id/item_value"/>
-        </androidx.cardview.widget.CardView>
+            android:fontFamily="@font/tajawal_light"
+            android:paddingTop="10sp"
+            android:text="Cornflakes"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/item_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|right"
+            android:layout_marginRight="20sp"
+            android:fontFamily="@font/tajawal_extra_light"
+            android:text="50 kcal"
+            android:textSize="20sp" />
+    </androidx.cardview.widget.CardView>
 
 
 
