--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -51,7 +51,7 @@
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/todayText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
